objects/Checklist__c.object
<CustomObject>
    <description>For case# 00162624, this objects and its fields are created. This object is having Look-up relationship with Case object.</description>
    <fields>
        <fullName>ARRA_Non_ARRA_Picklist__c</fullName>
        <label>ARRA/Non-ARRA Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ARRA_Non_ARRA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ARRA/Non-ARRA</description>
        <label>ARRA/Non-ARRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Parts_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional Parts/Items (Warranty &amp; subscription extension etc.)</description>
        <inlineHelpText>Additional Parts/Items (Warranty &amp; subscription extension etc.)</inlineHelpText>
        <label>Additional Parts/Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_documents_are_saved_in_CVAR_folder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All documents are saved in CVAR folder.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_files_are_in_correct_page_sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All files are in correct page sequence.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Array_Layout_is_correctly_laid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approved Array Layout is correctly laid out in the “Layout” tab</description>
        <inlineHelpText>Approved Array Layout is correctly laid out in the “Layout” tab</inlineHelpText>
        <label>Approved Array Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_with_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved with Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_Layout_Picklist__c</fullName>
        <label>Array Layout Error</label>
        <picklist>
            <picklistValues>
                <fullName>Azimuth ( North Arrow Orientation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Tile Dimension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Tile Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setback ( Edge &amp; Obstructions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Shape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walkway ( Fire, local code etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Array_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Array Layout</description>
        <inlineHelpText>Roof tile dimension
Roof tile orientation
Set back (edge and obstructions)
Array size and shape
Anchoring layout 
Shading
Walkway ( fire code etc.)
Others</inlineHelpText>
        <label>Array Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOM_Notes_are_listed_correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BOM Notes are listed correctly</description>
        <label>BOM Notes are listed correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOS_Parts_and_Quantity_is_properly_speci__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BOS Parts and Quantity is properly specified</description>
        <inlineHelpText>BOS Parts and Quantity is properly specified</inlineHelpText>
        <label>BOS Parts and Quantity is specified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ballast_block_stealth_tube_Picklist__c</fullName>
        <label>Ballast block &amp; stealth tube Error</label>
        <picklist>
            <picklistValues>
                <fullName>Hatching/Color Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Roof_Picklist__c</fullName>
        <label>Building &amp; Roof Error</label>
        <picklist>
            <picklistValues>
                <fullName>Dimension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Compatibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slip Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ponding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Roof__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Building &amp; Roof</description>
        <inlineHelpText>Dimension &amp; Roof height
Roof Slope
Roof compatibility
Slip sheet
Ponding
REPORT CHECK
Others</inlineHelpText>
        <label>Building &amp; Roof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Combiner_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Combiner Box is specified correctly</description>
        <label>Combiner Box is specified correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment10__c</fullName>
        <description>Comment for &apos;Site Aerial Review Picklist&apos;.</description>
        <inlineHelpText>Comment for &apos;Site Aerial Review Picklist&apos;.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment11__c</fullName>
        <description>Comment for &apos;Roof Photos&apos; checkbox.</description>
        <inlineHelpText>Comment for &apos;Roof Photos&apos; checkbox.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment12__c</fullName>
        <description>Comment for &apos;PPF (Pre-Purchase Form) Picklist&apos;.</description>
        <inlineHelpText>Comment for &apos;PPF (Pre-Purchase Form) Picklist&apos;.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correct_Module_Type_and_PV_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Correct Module Type and PV Type or Assembly is specified</description>
        <inlineHelpText>Correct Module Type and PV Type or Assembly is specified</inlineHelpText>
        <label>Correct Module Type and PV Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correction_on_misspelled_words__c</fullName>
        <description>Correction on misspelled words</description>
        <label>Correction on misspelled words</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Package_Service_is_specified_corr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Package Service is specified correctly</description>
        <inlineHelpText>Design Package Service is specified correctly</inlineHelpText>
        <label>Design Package is specified correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Review_Notes_Picklist__c</fullName>
        <label>Design Review Notes Error</label>
        <picklist>
            <picklistValues>
                <fullName>Roof Tile Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walkway/Fire/Local Code compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimension/Height/Roof Slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstruction Type &amp; Height etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Notes for Seismic - additional anchors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Review_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Review Notes</description>
        <inlineHelpText>Roof Tile Choice
Layout feasibility, walkway/fire/local code compliance, shading
Roof type, dimension and roof slope
Obstruction type and height
Other Notes ( Structural for additional seismic anchors etc.)</inlineHelpText>
        <label>Design Review Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Summary_Table_Picklist__c</fullName>
        <label>Design Summary Table Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Summary_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Summary Table</description>
        <inlineHelpText>Incorrect Information
Others</inlineHelpText>
        <label>Design Summary Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designer Name</description>
        <label>Designer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Approval_Time_hours__c</fullName>
        <description>Estimated Approval Time (hours)</description>
        <label>Estimated Approval Time (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Files_names_are_correctly_formatted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Files names are correctly formatted.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inverter Type ( Availability, service voltage, string sizing)</description>
        <inlineHelpText>Inverter Type ( Availability, service voltage, string sizing)</inlineHelpText>
        <label>Inverter Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Type_is_specified_correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inverter Type is specified correctly  ( ARRA or Non ARRA/ Voltage)</description>
        <inlineHelpText>Inverter Type is specified correctly  ( ARRA or Non ARRA/ Voltage)</inlineHelpText>
        <label>Inverter Type is specified correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inverter Warranty is specified correctly</description>
        <label>Inverter Warranty is specified correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverters_combiner_boxes_Picklist__c</fullName>
        <label>Inverters, combiner boxes Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Inverter Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Combiner Boxes Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Service Voltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Inverter Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverters_combiner_boxes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inverters, combiner boxes and availability, service voltage compatibility</description>
        <inlineHelpText>Inverters, combiner boxes and availability, service voltage compatibility</inlineHelpText>
        <label>Inverters, combiner boxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver Name</description>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Reason_for_Revision__c</fullName>
        <label>Notes/Reason for Revision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_requirements_request_notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other requirements/request/notes</description>
        <label>Other requirements/request/notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPF_Pre_Purchase_Form_Picklist__c</fullName>
        <label>PPF(Pre-Purchase Form) Error</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Note</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPF_Pre_Purchase_Form_String_Sizing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Missing Note
Incorrect Note</inlineHelpText>
        <label>PPF(Pre-Purchase Form)–String Sizing etc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PV_Sim_Picklist__c</fullName>
        <label>PV Sim Error</label>
        <picklist>
            <picklistValues>
                <fullName>Shading Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PV_Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PV Sim (for approved Design Service packages)</description>
        <inlineHelpText>Shading Calculation
PV Sim Summary</inlineHelpText>
        <label>PV Sim (for approved Design packages)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Purchase_Review_is_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre Purchase Review is Final</description>
        <label>Pre Purchase Review is Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_Bill_of_Materials_Picklist__c</fullName>
        <label>Preliminary Bill of Materials Error</label>
        <picklist>
            <picklistValues>
                <fullName>Roof Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA/Non ARRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combiner Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Voltage Compatibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS &amp; Accesory Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addt&apos;l Part or Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensions ( Warranty, Subscription etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preliminary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity_System_Design_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Opportunity &amp; System Design Case are updated.</description>
        <inlineHelpText>Project Opportunity &amp; System Design Case are updated.</inlineHelpText>
        <label>Project Opportunity &amp; System Design Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Racking_Parts_and_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Racking Parts and Quantity</description>
        <label>Racking Parts and Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision #</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If available</inlineHelpText>
        <label>Roof Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Tile_T5_T10_Module_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Roof Tile (T5/T10), Module type &amp; quantity, Anchoring count, availability</description>
        <inlineHelpText>Roof Tile (T5/T10), Module type &amp; quantity, Anchoring count, availability</inlineHelpText>
        <label>Roof Tile (T5/T10), Module type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Tile_and_Module_Type_Picklist__c</fullName>
        <label>Roof Tile and Module Type Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Roof Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Module Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_Subscription_and_Accessories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SMS, Subscription and Accessories are specified correctly</description>
        <inlineHelpText>SMS, Subscription and Accessories are specified correctly</inlineHelpText>
        <label>SMS, Subscription and Accessories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_accessory_kit_Picklist__c</fullName>
        <label>SMS &amp; accessory kit Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_accessory_kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SMS &amp; accessory kit</description>
        <label>SMS &amp; accessory kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Securement_quantity_is_specifi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Securement  quantity is properly specified</description>
        <inlineHelpText>Securement  quantity is properly specified</inlineHelpText>
        <label>Securement  quantity is specified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Notification</description>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Aerial_Review_Picklist__c</fullName>
        <label>Site Aerial Review Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Aerial_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Site Aerial Review</description>
        <inlineHelpText>Incorrect Building
Others</inlineHelpText>
        <label>Site Aerial Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Field__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Size_kW__c</fullName>
        <label>System Size (kW)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T5_T10_Ballast_block_stealth_tube_layo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T5/T10 Ballast block &amp; stealth tube layout / hatching or coloring</description>
        <inlineHelpText>T5/T10 Ballast block &amp; stealth tube layout / hatching or coloring</inlineHelpText>
        <label>T5/T10 Ballast block &amp; stealth tube</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T5_T10_Datasheet_Picklist__c</fullName>
        <label>T5/T10 Datasheet Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T5_T10_Datasheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Incorrect attachment
Incorrect Revision</inlineHelpText>
        <label>T5/T10 Datasheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T5_T10_Preliminary_Bill_of_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T5/T10 Preliminary Bill of Materials</description>
        <inlineHelpText>Roof Tile (T5/T10), Module type &amp; quantity
ARRA/Non-ARRA
Inverters, combiner boxes, service voltage compatibility , equipment availability
SMS &amp; accessory kit
Additional Parts/Items ( Warranty &amp; subscription extension etc.)</inlineHelpText>
        <label>T5/T10 Preliminary Bill of Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T5_T10_Wind_Load_Calculator_Picklist__c</fullName>
        <label>T5/T10 Wind Load Calculator Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T5_T10_Wind_Load_Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T5/T10 Wind Load Calculator</description>
        <inlineHelpText>Incorrect information
Incorrect Version
Others</inlineHelpText>
        <label>T5/T10 Wind Load Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Typo_Errors_only__c</fullName>
        <description>Typo Errors only</description>
        <label>&lt;font color=&quot;white&quot;&gt;TypoErrors&lt;/font&gt;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wind_Map_Picklist__c</fullName>
        <label>Wind Map Error</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wind_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wind Map</description>
        <inlineHelpText>Incorrect Mark
Others</inlineHelpText>
        <label>Wind Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wind_loading_Specifications_Picklist__c</fullName>
        <label>Wind loading &amp; Specifications Error</label>
        <picklist>
            <picklistValues>
                <fullName>Site Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seismic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wind_loading_Specifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wind loading &amp; Specifications</description>
        <inlineHelpText>Site Exposure
 Wind speed
Occupancy type
Seismic
Others</inlineHelpText>
        <label>Wind loading &amp; Specifications</label>
        <type>Checkbox</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <displayFormat>CH-{00000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <recordTypes>
        <fullName>NA_Approver_Design_Package_Layout_Proposal</fullName>
        <active>true</active>
        <description>NA - Approver - Design Package-Layout Proposal Checklist</description>
        <label>NA - Approver - Design Package-Layout Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Approver_PPR</fullName>
        <active>true</active>
        <description>NA - Approver - PPR Checklist</description>
        <label>NA - Approver - PPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Approver_PV_Inverter_BOM</fullName>
        <active>true</active>
        <description>NA - Approver - PV &amp; Inverter BOM Checklist</description>
        <label>NA - Approver - PV &amp; Inverter BOM</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Approver_Roof_Tile_BOM</fullName>
        <active>true</active>
        <description>NA - Approver - Roof Tile BOM - Checklist</description>
        <label>NA - Approver - Roof Tile BOM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARRANonARRAValidationRule</fullName>
        <active>true</active>
        <description>To select a value from &apos;ARRA/Non-ARRA Picklist&apos; its parent checkbox &apos;ARRA/Non-ARRA&apos; need to be checked.</description>
        <errorConditionFormula>((TEXT( ARRA_Non_ARRA_Picklist__c ) &lt;&gt; &apos;&apos;) &amp;&amp; ( ARRA_Non_ARRA__c = false))</errorConditionFormula>
        <errorDisplayField>ARRA_Non_ARRA__c</errorDisplayField>
        <errorMessage>To select a value from &apos;ARRA/Non-ARRA Picklist&apos; its parent checkbox &apos;ARRA/Non-ARRA&apos; need to be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ArrayLayoutValidationRule</fullName>
        <active>true</active>
        <description>To select a value from &apos;Array Layout Picklist&apos; its parent checkbox &apos;Array Layout&apos; need to be checked.</description>
        <errorConditionFormula>((TEXT( Array_Layout_Picklist__c ) &lt;&gt; &apos;&apos;) &amp;&amp; ( Array_Layout__c = false))</errorConditionFormula>
        <errorDisplayField>Array_Layout__c</errorDisplayField>
        <errorMessage>To select a value from &apos;Array Layout Picklist&apos; its parent checkbox &apos;Array Layout&apos; need to be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BallastBlockStealthTubeValidationRule</fullName>
        <active>true</active>
        <description>To select a value from &apos;Ballast block &amp; stealth tube Picklist&apos; its parent checkbox &apos;T5/T10 Ballast block &amp; stealth tube&apos; need to be checked.</description>
        <errorConditionFormula>((TEXT( Ballast_block_stealth_tube_Picklist__c ) &lt;&gt; &apos;&apos;) &amp;&amp; ( T5_T10_Ballast_block_stealth_tube_layo__c = false))</errorConditionFormula>
        <errorDisplayField>T5_T10_Ballast_block_stealth_tube_layo__c</errorDisplayField>
        <errorMessage>To select a value from &apos;Ballast block &amp; stealth tube Picklist&apos; its parent checkbox &apos;T5/T10 Ballast block &amp; stealth tube&apos; need to be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BuildingAndRoofValidationRule</fullName>
        <active>true</active>
        <description>To select a value from &apos;Building &amp; Roof Picklist&apos; its parent checkbox &apos;Building &amp; Roof&apos; need to be checked.</description>
        <errorConditionFormula>((TEXT( Building_Roof_Picklist__c ) &lt;&gt; &apos;&apos;) &amp;&amp; ( Building_Roof__c   = false))</errorConditionFormula>
        <errorDisplayField>Building_Roof__c</errorDisplayField>
        <errorMessage>To select a value from &apos;Building &amp; Roof Picklist&apos; its parent checkbox &apos;Building &amp; Roof&apos; need to be checked.</errorMessage>
    </validationRules>
</CustomObject>